# Loom_Bootloader

./: .bochsrc  CMakeLists.txt  README.md  shell.nix
bootloader/: .clang-format  CMakeLists.txt  Makefile  README.md  bochsrc  build.containerfile  shell.nix
bootloader/cmake/: core.cmake  create_module.cmake  gensyms.cmake  modules.cmake  os.cmake
bootloader/cmake/arch/: x86.cmake
bootloader/cmake/platform/: x86-bios.cmake  x86-common.cmake
bootloader/cmake/tc/: x86-common.cmake  x86.cmake
bootloader/gdb/: config  mod.py
bootloader/host/: install.c
bootloader/include/loom/: arch.h  assert.h  block_dev.h  command.h  compiler.h  console.h  disk.h  elf.h  endian.h  error.h  input.h  kernel_loader.h  keycode.h  list.h  main.h  math.h  mm.h  mmap.h  module.h  (+9 more)
bootloader/mk/: build.mk  container.mk  gensym.sh  hdrs.mk  mods.mk  srcs.mk  syms.mk  toolchain.mk
cmake/: core.cmake  create_module.cmake  gensyms.cmake  modules.cmake
cmake/platform/: x86-bios.cmake  x86-common.cmake
cmake/tc/: x86-clang.cmake  x86-common.cmake  x86-gcc.cmake
gdb/: config  gdb-mod.py  gdb.conf
host/: CMakeLists.txt  host_impl.c  install.c  mkimage.c  osdep.c  osdep.h
include/loom/: assert.h  block_dev.h  buffer.h  command.h  compiler.h  console.h  dir.h  elf.h  endian.h  error.h  file.h  fs.h  input.h  kernel_loader.h  keycode.h  list.h  main.h  math.h  mm.h  mmap.h  module.h  os.h  partition.h  partition_scheme.h  platform.h  print.h  shell.h  sp.h  string.h  symbol.h  types.h
scripts/: dbg  mkimg  run
src/core/: arith.c  assert.c  block_dev.c  command.c  console.c  dir.c  elf.c  error.c  file.c  fs.c  input.c  kernel_loader.c  keycode.c  list.c  main.c  mm.c  mmap.c  module.c  panic.c  partition.c  partition_scheme.c  print.c  shell.c  sp.c  string.c  symbol.c
src/mods/: fat.c  gpt.c  hello.c  mbr.c
(+121 files in other folders)
